fixed a bug with celcius sign not showing

--- a/src/main.css
+++ b/src/main.css
@@ -205,7 +205,7 @@ legend {
   row-gap: 5px;
 }
 
-.temp__temp {
+.temp__value {
   font-size: 60px;
   font-weight: bold;
 }
